Re-add pentacle

--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -79,19 +79,19 @@
     <!-- To St Paul:  -->
     <h3><a href="{% url 'watchtower' %}">@ THE WATCHTOWER</a></h3> 
 
+    <br />
+    <center><img id="pent" src="{% static 'img/pentacle.gif' %}" /></center>
+
     <hr>    
 
     <h3><a href="{% url 'essay_list' %}">Essay list</a></h3>
         
-    <!-- <br />
-    {% comment %}<center><img id="pent" src="{% static 'img/pentacle.gif' %}" /></center>{% endcomment %}
-    <br /> -->
-    
+        
     <!-- To landing page explaining "why" and "what" of this website:  -->
     <h3><a href="{% url 'about' %}">(About)</a></h3> 
     
     <!-- To generic tarot card landing page (random selection):  -->
-    
+
     <h3><a href="{% url 'get_tarot_key_generator' %}">(Tarot at random)</a></h3> 
    
     <center><img width="5%" src="{% static 'img/TM-retry-crimson.png' %}"></center>
