Added strong elements to dictionary definition

--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -47,7 +47,7 @@
     <h1>exousia <span id="def">(ex-ou-<strong>SEEAH</strong>) n.
     
       <br />   <br />
-      From Koine Greek ἐξοντ- (exont-, participle) +‎ -ῐ́ᾱ (-íā, verbal adjective suffix), from ἔξεστι (éxesti, “it is possible, it is allowed”).
+      From Koine Greek <strong>ἐξοντ-</strong> (exont-, participle) +‎ -ῐ́ᾱ (<strong>-íā</strong>, verbal adjective suffix), from <strong>ἔξεστι</strong> (éxesti, “it is possible, it is allowed”).
       <br />
       <strong>1.</strong> <em>power</em>, means, license, or authority to do something.</span>
     
@@ -84,7 +84,7 @@
 
     <hr>    
 
-    <h3><a href="{% url 'essay_list' %}">Essay list</a></h3>
+    <h3><a href="{% url 'essay_list' %}">Complete essay list</a></h3>
         
         
     <!-- To landing page explaining "why" and "what" of this website:  -->
