Change "@HOLLYWOOD" to "@FILM"

--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -55,7 +55,7 @@
     <h1 >
       
       <center>
-        <span id="def">"All things are subject to interpretation. Whichever interpretation prevails at a given time is a function, not of truth, but of power." <br />- - Friedrich Nietzsche, <em>Will to Power</em>  </span>  
+        <span id="def">"All things are subject to interpretation. Whichever interpretation prevails at a given time is a function, not of truth, but of <em>power</em>." <br />- - Friedrich Nietzsche, <em>Will to Power</em>  </span>  
       </center>
       
     </h1>
@@ -71,7 +71,7 @@
     <!-- To Forrest Gump article:  -->
     <h3>
       <div class="tooltip">
-        <a href="#">@ HOLLYWOOD</a> 
+        <a href="#">@ FILM</a> 
         <span class="tooltiptext">Pending</span>
       </div>
     </h3> 
