Swapped 'first initiate' branding w/ 'exusia/warden'

--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -64,7 +64,7 @@
       <img class="site-logo two" src="https://i.imgur.com/JKFJ68x.jpg" alt="Judgement" />
   
       <img class="site-logo three" src="https://i.imgur.com/ob343qN.jpg" alt="The Emperor"/>
-
+      <h1>Tarot</h1>
     <!-- To F/LOSS/GG:  -->
     <h3><a href="{% url 'slashdot' %}">@ SLASHDOT</a></h3> 
     
