--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
   
   <meta name="theme-color" content="#fafafa">
   
-  <title>The First Initiate 1614</title>
+  <title>Tarot</title>
 
 </head>
 
