--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -2,10 +2,14 @@
     
     <div id="license">
     
-    <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
+    <a rel="license" href="https://creativecommons.org/licenses/by/4.0/">
+        
+        <img alt="Creative Commons License" src="https://i.creativecommons.org/l/by/4.0/88x31.png"/>
+        
+    </a>
         <br /> 
         <br /> 
-    This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
+    This work is licensed under a <a rel="license" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
         <br /> 
         <br /> 
         <i class="fa fa-compass fa-2x"></i>
