--- a/templates/landings/gateway.html
+++ b/templates/landings/gateway.html
@@ -1,105 +1,25 @@
 <!-- <center>{% block title %} (null) so far {% endblock %}</center> -->
-{% block extra_head %}
-  <link rel="stylesheet" href="#}">
-  <style>
+{% load static %}
 
-  label {
-	  color: white;
-  }
+<link rel="stylesheet" href="{% static 'css/gateway.css' %}" type="text/css">
 
-   body {
-	  background: gray;
-    color: white;
-    text-align: center;
-  }
-  img {
-    border-radius: 25px;
-    margin-top: 100px;
-    border: dashed;
-  }
-  h3 {
-    margin-bottom: 100px;
-  }
-  input {
-    margin:5px;
-    border-radius: 5px;
-  }
-  h1{
-    font-size: 2em;
-    /* margin-top:75px;*/
-  }
-  
-  hr {
-    margin-top: 40px;
-    width: 300px;
-    margin-bottom: 40px;
-  }
-
-  
-  /* section {
-    margin: 0 1px;
-  }*/
-
-  /*
-  .card {
-	  border: none;
-  }
-  .btn-secondary {
-    background-color: crimson;
-	border-color: black;
-  }
-*/
-/* unvisited link */
-a:link {
-  color: crimson;
-text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 30px #fff, 0 0 20px white;
-}
-/* visited link */
-a:visited {
-  color: crimson;
-}
-
-/* mouse over link */
-a:hover {
-  color: crimson;
-}
-
-/* selected link */
-a:active {
-  color: crimson;
-}
-  /* #id {
-    overflow: hidden;
-  }*/
-  
-  .container {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background-color: crimson;
-    padding: 15px;
-  }
-
-  div {
-    display: block;
-  }
-
-  </style>
-{% endblock %}
 {% block content %}
 
 <section id="login" class="bg-light py-5">
     <div class="container">
-    
+      {% include 'partials/_alerts.html' %}
     </div>
-
-    <img src="https://placekitten.com/200/287">
-    <h3> Figure 1: Catz</h3>
     <h1> This website is hermetically sealed. </h1>
+    <!-- <img src="https://placekitten.com/200/287"> -->
+    <img src="{% static 'img/santa2.jpg' %}">
+    <h3> Exhibit 1: Santa Muerte</h3>
+    
     <!-- This is Santa Meurte. She prevents people from entering. If you have a passcode, enter it here: -->
               <!-- Alerts -->
-              {% include 'partials/_alerts.html' %}
+              
 
+               <!--  {# 
+                
                 <form action="{% url 'index' %}" method="POST">
                   {% csrf_token %}
 
@@ -115,18 +35,20 @@ a:active {
                 <input type="submit" value="Login" class="btn btn-secondary btn-block">
                 <br>Not a member yet?  <a href="{% url 'register' %}">Register!</a>
               </form>
-           </div>
+           </div> 
+           
+           #} -->
 
     <div>
       <form action="{% url 'index' %}" method="POST">
           {% csrf_token %}
-        <H1>Alternatively:</h1>
-          <h4>(Bypass username and password requirement)</h4>
+        <!-- <H1>Alternatively:</h1>
+          <h4>(Bypass username and password requirement)</h4> -->
          <div class="form-group">
-          <label for="passphrase">Enter Your Pass Phrase Shortcut:</label>
+          <label for="passphrase">Enter Your Pass Phrase:</label>
           <input type="text" name="passphrase" class="form-control" required>
         </div>
-        <input type="submit" value="Byass" class="btn btn-secondary btn-block">
+        <input type="submit" value="Bypass" class="btn btn-secondary btn-block">
 
       </form>
     </div>
