--- a/templates/landings/gateway.html
+++ b/templates/landings/gateway.html
@@ -10,9 +10,9 @@
       {% include 'partials/_alerts.html' %}
     </div>
     <h1> This website is hermetically sealed. </h1>
-    <!-- <img src="https://placekitten.com/200/287"> -->
-    <img src="{% static 'img/santa2.jpg' %}">
-    <h3> Exhibit 1: Santa Muerte</h3>
+    <img src="https://placekitten.com/200/287"> 
+    <!--     <img src="{% static 'img/santa2.jpg' %}">-->
+    <h3> Exhibit 1: Kittens</h3>
     
     <!-- This is Santa Meurte. She prevents people from entering. If you have a passcode, enter it here: -->
               <!-- Alerts -->
