Rewriting Account's App from scratch
Rewrite the Account's App from scratch, included more secure URL protection, passphrase changing functionality using admin view.

--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -86,6 +86,8 @@
     
     <!-- To generic tarot card landing page (random selection):  -->
     <h3><a href="{% url 'get_tarot_key_generator' %}">(Tarot at random)</a></h3> 
+
+    <h3><a href="{% url 'logout' %}">logout ?</a></h3> 
    
     <!-- <figure>
     <div class="videoWrapper">
