Prepare for zone session

--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -47,7 +47,7 @@
     <!-- Original concept borrowed from Marco Dell'Anna in a CodePen titled ALIEN - Deviation of microcosm, source: https://codepen.io/plasm/pen/JNPXxg  -->
 
 
-    <h1>Tarot</h1>
+    <h1>Global Initiation</h1>
     
     <center></center>
 
