--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -47,10 +47,11 @@
     <!-- Original concept borrowed from Marco Dell'Anna in a CodePen titled ALIEN - Deviation of microcosm, source: https://codepen.io/plasm/pen/JNPXxg  -->
 
 
-    <h1>Global Initiation</h1>
+    <!-- <h1>Global Initiation</h1> -->
+    <h1>Tarot</h1>
     
     <center></center>
-
+    <!-- <center><img width="15%" src="{% static 'img/compass1-black-with-blur4.png' %}"></center> -->
     <!-- To F/LOSS/GG:  -->
     <h3><a href="{% url 'slashdot' %}">@ SLASHDOT</a></h3> 
     
@@ -87,7 +88,7 @@
     <!-- To generic tarot card landing page (random selection):  -->
     <h3><a href="{% url 'get_tarot_key_generator' %}">(Tarot at random)</a></h3> 
 
-    <h3><a href="{% url 'logout' %}">logout ?</a></h3> 
+    <h3><a href="{% url 'logout' %}">Logout?</a></h3> 
    
     <!-- <figure>
     <div class="videoWrapper">
