Replace "Bypass" w/ "Submit"

--- a/templates/landings/gateway.html
+++ b/templates/landings/gateway.html
@@ -48,7 +48,7 @@
           <label for="passphrase">Enter Your Pass Phrase:</label>
           <input type="text" name="passphrase" class="form-control" required>
         </div>
-        <input type="submit" value="Bypass" class="btn btn-secondary btn-block">
+        <input type="submit" value="Submit" class="btn btn-secondary btn-block">
 
       </form>
     </div>
