--- a/templates/partials/_alerts.html
+++ b/templates/partials/_alerts.html
@@ -3,7 +3,7 @@
   {% for message in messages %}
     <div id="message" class="container">
       <div class="alert alert-{{ message.tags }} alert-dismissible text-center" role="alert">
-        <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span></button>
+        <!-- <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span></button> -->
         <strong>
           {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
             Error: 
