--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
 
   {% include 'partials/_navbar.html' %}
 
-  <!-- Main Content -->
+  Main Content
   <div class="main-container">
       {% block content %} {% endblock %}
   </div>
