--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -82,7 +82,7 @@
     <br />
     
     <!-- To landing page explaining "why" and "what" of this website:  -->
-    <h3><a href="{% url 'about' %}">(About)</a></h3> 
+    <h3><a href="{% url 'about' user_name %}">(About)</a></h3> 
     
     <!-- To generic tarot card landing page (random selection):  -->
     <h3><a href="{% url 'get_tarot_key_generator' %}">(Tarot at random)</a></h3> 
