--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 <nav class="navbar navbar-expand-md navbar-dark bg-primary sticky-top">
     <div class="container-md container-lg">
-      <a class="navbar-brand d-none d-md-block" href="{% url 'portal' %}">
+      <a class="navbar-brand d-none d-md-block" href="{% url 'portal' user_name %}">
         <img src="{% static 'img/crimson-pentavcle-wtih-grey.gif' %}" class="logo" alt="" id="squad_grey no-shadow">
       </a>
       <button class="navbar-toggler mx-auto mx-1-md" type="button" data-toggle="collapse" id="toggler-button" data-target="#navbarNavAltMarkup" onclick="navbarButton()">
@@ -25,7 +25,7 @@
               class="nav-item mx-auto mr-md-3 align-self-center"
             {% endif %}
           >
-            <a class="nav-link" href="{% url 'portal' %}">Portal</a>
+            <a class="nav-link" href="{% url 'portal' user_name %}">Portal</a>
           </li>
 
           <li
@@ -35,7 +35,7 @@
               class="nav-item mr-md-3 mx-sm-auto align-self-center"
             {% endif %}
           >
-            <a class="nav-link" href="{% url 'about' %}">About</a>
+            <a class="nav-link" href="{% url 'about' user_name %}">About</a>
           </li>
 
           <li 
