--- a/templates/essays/slashdot.html
+++ b/templates/essays/slashdot.html
@@ -7,7 +7,8 @@
 {% endblock %}
 
 {% block content %}
-
+<article class="article">
+  <div class="essay">
   {% if slashdot_obj %}
         <div><h2>{{ slashdot_obj.title }}</h2></div>
         <p> {{ slashdot_obj.introduction|safe }} </p>
@@ -25,6 +26,7 @@
         <p>{{ slashdot_obj.conclusion|safe }} </p>
         <br>
   {% endif %}
-  </div>
+</div> <!-- end essay -->
+</article>
 
 {% endblock %}
