Add 'insurance policy' to gateway template

--- a/templates/landings/gateway.html
+++ b/templates/landings/gateway.html
@@ -13,7 +13,7 @@
     <h1> This website is hermetically sealed. </h1>
     <img src="https://placekitten.com/200/287"> 
     <!--     <img src="{% static 'img/santa2.jpg' %}">-->
-    <h3> Exhibit 1: Kittens</h3>
+    <h3> This website's insurance policy is provided by an army of hell cats</h3>
     
     <!-- This is Santa Meurte. She prevents people from entering. If you have a passcode, enter it here: -->
               <!-- Alerts -->
