--- a/tarot_juicer/static/css/gateway.css
+++ b/tarot_juicer/static/css/gateway.css
@@ -1,5 +1,7 @@
 label {
-    color: white;
+    color: crimson;
+    font-weight: bold;
+    font-size: 20px;
 }
 
  body {
@@ -8,17 +10,21 @@ label {
   text-align: center;
   margin: 0 auto;
 }
+
 img {
   border-radius: 25px;
   margin-top: 100px;
   /*border: dashed;*/
 }
+
 h3 {
-  margin-bottom: 100px;
+  margin-bottom: 36px;
 }
 input {
-  margin:5px;
-  border-radius: 5px;
+  margin:10px;
+  border-radius: 14px;
+  margin-top: 20px;
+  padding: 5px;
 }
 h1{
   font-size: 2em;
@@ -27,7 +33,7 @@ h1{
 
 hr {
   margin-top: 40px;
-  width: 300px;
+  width: 66%;
   margin-bottom: 40px;
 }
 
@@ -71,7 +77,7 @@ color: crimson;
 .container {
   background-color: crimson;
   padding: 15px;
-  animation: cssAnimation 1s ease-in 5s forwards;
+  animation: cssAnimation 1s ease-in 2s forwards;
 }
 /* Useless Css */
 /* div {
@@ -79,7 +85,26 @@ color: crimson;
 } */
 @keyframes cssAnimation {
   to {
-    transform: scaleX(0.5);
+    transform: scale(10) translateY(-50%);
     opacity: 0;
   }
+}
+
+#muerte {
+ display: block;
+ max-width: 80%;
+ margin: auto;
+ margin-top: 36px;
+}
+
+#passphrase {
+  display: block;
+  color: crimson;
+  
+}
+
+.submit {
+  padding: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
