Add 3 @FILM links for testing

--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -53,15 +53,25 @@
     <h1>TAROT</h1>  
     <!-- To F/LOSS/GG:  -->
     <h3><a href="{% url 'slashdot' %}">@ SLASHDOT</a></h3> 
-    
+    <br>
     <!-- To Forrest Gump article:  -->
     <h3>
       <div class="tooltip">
-        <a href="#">@ FILM</a> 
+        <a href="https://tarot-juicer-next-iter.herokuapp.com/article/Forrest_Gump/">@ FILM (Heroku)</a> 
+      </div>
+    </h3> 
+    <h3>
+      <div class="tooltip">
+        <a href="http://127.0.0.1:8000/article/Forrest_Gump/">@ FILM (local)</a> 
+      </div>
+    </h3> 
+    <h3>
+      <div class="tooltip">
+        <a href="#">@ FILM (former, blank)</a> 
         <span class="tooltiptext">Pending</span>
       </div>
     </h3> 
-
+    <br>
     <!-- To St Paul:  -->
     <h3><a href="{% url 'watchtower' %}">@ THE WATCHTOWER</a></h3> 
     
