--- a/tarot_juicer/static/css/portal.css
+++ b/tarot_juicer/static/css/portal.css
@@ -39,7 +39,7 @@ body {
   height: 100%;
   color: white;
   /*position: relative;*/
-  background: linear-gradient(-90deg, #6c6c6c 0%, black 100%);
+  /*background: linear-gradient(-90deg, #6c6c6c 0%, black 100%);*/
   background-attachment: fixed;
   border: none;
   text-shadow: 0px 2px 3px black;
