Correct article:web_address positioning

--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -57,7 +57,12 @@
     <!-- To Forrest Gump article:  -->
     <h3>
       <div class="tooltip">
-        <a href="https://tarot-juicer-next-iter.herokuapp.com/article/Forrest_Gump/">@ FILM (Heroku)</a> 
+        <a href="https://tarot-prod.herokuapp.com/article/Forrest_Gump/">@ FILM (Heroku, prod)</a> 
+      </div>
+    </h3> 
+    <h3>
+      <div class="tooltip">
+        <a href="https://tarot-test.herokuapp.com/article/Forrest_Gump/">@ FILM (Heroku, testing)</a> 
       </div>
     </h3> 
     <h3>
