@FILM / @HOLLYWOOD cleanup

--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -55,7 +55,7 @@
     <h3><a href="{% url 'slashdot' %}">@ SLASHDOT</a></h3> 
     <br>
     <!-- To Forrest Gump article:  -->
-    <h3>
+    <!-- <h3>
       <div class="tooltip">
         <a href="https://tarot-prod.herokuapp.com/article/tarot-and-forrest-gump/">@ FILM (Heroku, prod)</a> 
       </div>
@@ -69,10 +69,10 @@
       <div class="tooltip">
         <a href="http://127.0.0.1:8000/article/Forrest_Gump/">@ FILM (local)</a> 
       </div>
-    </h3> 
+    </h3> -->
     <h3>
       <div class="tooltip">
-        <a href="#">@ FILM (former, blank)</a> 
+        <a href="#">@ HOLLYWOOD</a> 
         <span class="tooltiptext">Pending</span>
       </div>
     </h3> 
