Add "Card meaning" <h1>

--- a/templates/generators/tarot_key.html
+++ b/templates/generators/tarot_key.html
@@ -75,7 +75,7 @@
           </ul>
 
         </section>  <!-- end general -->
-
+        <h1>Card meaning:</h1>
           <p class="content animated rubberBand">{{ generator.description|safe }} </p>
           
           <ul class="bullets">
@@ -98,6 +98,7 @@
            src="{% static 'img/Paul.gif' %}" alt="narrative" class="show-img-shadow" id="st-paul-img"> <br /> St Paul</li>
 
         </ul>
+        
         <div id="contents-wrapper">
             <div id="galileo-content" class="narrative-h1s"> 
                 <h1 class="narrative-h1s animated fadeInRightBig">Galileo</h1>
