--- a/tarot_juicer/static/css/essay-main.css
+++ b/tarot_juicer/static/css/essay-main.css
@@ -78,11 +78,11 @@ h2 {
   margin-top: 40px;
   margin-bottom: 27px;
   padding: 0.25em 0.5em;
-  text-align: center;
+  text-align: left;
   color: gold;
   /*text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;*/
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black,
-    0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 10px #fff; /* 0 0 20px #fff, 0 0 30px #fff;*/
+    /* 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 10px #fff; /* 0 0 20px #fff, 0 0 30px #fff;*/
 }
 .sub-headline {
   width: 340px;
