--- a/templates/essays/watchtower.html
+++ b/templates/essays/watchtower.html
@@ -10,17 +10,18 @@
     <article class="article">
     <div class="essay">
   {% if watchtower_obj %}
-        <div><h2>{{ watchtower_obj.title }}</h2></div>
+        <div><h1>{{ watchtower_obj.title }}</h1></div>
         <p> {{ watchtower_obj.introduction|safe }} </p>
         <br>
           {% for generator in generators %}
-              <h4>Generator: {{ generator.watchtower_position }}</h4>
+              <h2>Tarot Key: {{ generator.number }}</h2>
               <img class="tarot-small-key right" src="{{ generator.tarot_card_image }}" width="180"/>
               <p>{{ generator.description|safe }}</p>
+              <h2>The Pauline narrative:</h2>
               <p>{{ generator.st_paul_content|safe }}</p>            
           {% endfor %}
         <br>
-        <h3>Conclusion:</h3>
+        <hr>
         <p>{{ watchtower_obj.conclusion|safe }} </p>
         <br>
   {% endif %}
