--- a/templates/generators/tarot_key.html
+++ b/templates/generators/tarot_key.html
@@ -33,8 +33,8 @@
 <!-- End Carousel code-->
 
   <div id="centered-buttons" class="social">
-
-    <a class="btn third social" href="{% url 'tarot_key_with_number' generator_number=next_card_number %'}" >Card At Random</a>
+    
+    <a class="btn third social" href="{% url 'tarot_key_with_number' next_card_number %}" >Card At Random</a>
 
     <!-- Slip's alternative button
       {% comment %} 
