--- a/templates/essays/slashdot.html
+++ b/templates/essays/slashdot.html
@@ -7,16 +7,19 @@
 {% endblock %}
 
 {% block content %}
-
+<article class="article">
+  <div class="essay">
   {% if slashdot_obj %}
-        <div><h2>{{ slashdot_obj.title }}</h2></div>
+        <div><h1>{{ slashdot_obj.title }}</h1></div>
         <p> {{ slashdot_obj.introduction|safe }} </p>
         <br>
           {% for generator in generators %}
-              <h4>Generator: {{ generator.slashdot_position }}</h4>
+              <h2>Tarot Key {{ generator.number }}: {{ generator.title }}</h2>
               <p>{{ generator.description|safe }}</p>
                 <img class="tarot-small-key right" src="{{ generator.tarot_card_image }}" width="180"/>
+                <h2>The Galilean narrative:</h2>
               <p>{{ generator.galileo_content|safe }}</p>
+                <h2>The FLOSS narrative:</h2>
               <p>{{ generator.f_loss_content|safe }}</p>
             
           {% endfor %}
@@ -25,6 +28,6 @@
         <p>{{ slashdot_obj.conclusion|safe }} </p>
         <br>
   {% endif %}
-  </div>
-
+</div> <!-- end essay -->
+</article>
 {% endblock %}
