--- a/templates/essays/watchtower.html
+++ b/templates/essays/watchtower.html
@@ -14,7 +14,7 @@
         <p> {{ watchtower_obj.introduction|safe }} </p>
         <br>
           {% for generator in generators %}
-              <h2>Tarot Key: {{ generator.number }}</h2>
+          <h2>Tarot Key {{ generator.number }}: {{ generator.title }}</h2>
               <img class="tarot-small-key right" src="{{ generator.tarot_card_image }}" width="180"/>
               <p>{{ generator.description|safe }}</p>
               <h2>The Pauline narrative:</h2>
