--- a/tarot_juicer/static/css/essay-main.css
+++ b/tarot_juicer/static/css/essay-main.css
@@ -81,8 +81,11 @@ h2 {
   text-align: left;
   color: crimson;
   /*text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;*/
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black,
+  /* text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     /* 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 10px #fff; /* 0 0 20px #fff, 0 0 30px #fff;*/
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black, 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 10px #fff;
+  }
+  
 }
 .sub-headline {
   width: 340px;
