Adjust margin property + added hr element

--- a/tarot_juicer/static/css/essay-main.css
+++ b/tarot_juicer/static/css/essay-main.css
@@ -114,7 +114,7 @@ h2 {
 h1 {
   text-align: left;
   /* margin-top: -50px; */
-  margin-left: 66px;
+  /*margin-left: 66px;*/
   margin-bottom: 76px;
 }
 
