Can’t scroll tarot album
- [x] Can’t scroll tarot album because of `.slider` width is not defined.

--- a/tarot_juicer/static/css/carousel.css
+++ b/tarot_juicer/static/css/carousel.css
@@ -19,6 +19,7 @@
 
 /* The slider - grid container */
 .slider {
+  width: 100%;
   display: grid;
   grid-gap: var(--gap);
   grid-template-columns: repeat(auto-fill, 1fr);
