--- a/tarot_juicer/static/css/essay-main.css
+++ b/tarot_juicer/static/css/essay-main.css
@@ -75,6 +75,7 @@ h6 {
 }
 
 h2 {
+  font-size: 200;
   margin-top: 40px;
   margin-bottom: 27px;
   padding: 0.25em 0.5em;
@@ -978,4 +979,10 @@ section.general img.pelican-specific {
 
 a {
   color: white;
+}
+
+
+h3 {
+  color:crimson;
+  font-size: 150%;
 }
