--- a/templates/landings/gateway.html
+++ b/templates/landings/gateway.html
@@ -18,7 +18,9 @@
     
     <!-- <h3> This website is protected by cute little kittens</h3>  -->
 
-    <h3> This website is hermetically sealed and protected by Santa Muerte</h3>  
+    <h3> This website is hermetically sealed 
+      <br> 
+      It's protected by Santa Muerte</h3>  
 
     <hr>
 
