--- a/templates/generators/tarot_key.html
+++ b/templates/generators/tarot_key.html
@@ -44,14 +44,14 @@
     
       <div class="but-flex but-row max-width-360">
         
-        <a href="#" class="btn nav_button social">Prev <i>&#8592;</i></a>
+        <a href="{% url 'tarot_key_with_number' prev_generator %}" class="btn nav_button social">Prev <i>&#8592;</i></a>
   
         <div class="but-flex but-column">
           <a class="btn third social" href="{% url 'tarot_key_with_number' next_card_number %}" >Card At Random</a>
           <a href="#" class="btn third social" id="choose-card">Show / Hide Album</a>
         </div>
         
-        <a href="#" class="btn nav_button social">Next <i>&#8594;</i></a>
+        <a href="{% url 'tarot_key_with_number' next_generator %}" class="btn nav_button social">Next <i>&#8594;</i></a>
       
       </div>
 
