Correct <title> element to refelct Global Initiation

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
   
   <meta name="theme-color" content="#fafafa">
   
-  <title>Nondescript</title>
+  <title>Global Initiation</title>
 
 </head>
 
