--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -4,22 +4,20 @@
 <html>
   <head>
     <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Nondescript</title>
-  <meta name="author" content="name">
-  <meta name="description" content="description here">
-  <meta name="keywords" content="keywords,here">
-  <meta name="robots" content="noindex,nofollow" />
-  <meta name="theme-color" content="black">
-  <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
-  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=font1|font2|etc" type="text/css">
-  <!-- <link rel="stylesheet" href="css/styles.css" type="text/css">-->
-  <link rel="stylesheet" href="{% static 'css/portal.css' %}" type="text/css">
-  <style type="text/css">
-   
-  </style>
-  
-  <script>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Global Initiation</title>
+    <meta name="author" content="name">
+    <meta name="description" content="description here">
+    <meta name="keywords" content="keywords,here">
+    <meta name="robots" content="noindex,nofollow" />
+    <meta name="theme-color" content="black">
+    <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=font1|font2|etc" type="text/css">
+    <!-- <link rel="stylesheet" href="css/styles.css" type="text/css">-->
+    <link rel="stylesheet" href="{% static 'css/portal.css' %}" type="text/css">
+    <style type="text/css">
+    </style>
+    <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -28,9 +26,7 @@
         ga('send', 'pageview');
     </script>
     <!-- End Google Analytics -->
-
   </head>
-  
   <body>
               <!-- Google Tag Manager -->
               <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-T3WKDW"
