--- a/templates/essays/watchtower.html
+++ b/templates/essays/watchtower.html
@@ -14,7 +14,7 @@
         <div class="essay-meta-data">
           <h6>First Posted: {{ watchtower_obj.date_first_posted }}</h6>
           <h6>Last Updated: {{ watchtower_obj.date_changed }}</h6>
-          <h6>Author: Warden144</h6>
+          <h6>Author: {{ watchtower_obj.authors }}</h6>
           <h6><a href="{% url 'content_changelog' %}">Changelog here.</a></h6>
         </div>
         {{ watchtower_obj.introduction|safe }} 
@@ -24,13 +24,21 @@
               <img class="tarot-small-key right" src="{{ generator.tarot_card_image }}" width="180"/>
               <p>{{ generator.description|safe }}</p>
               <h3>The Pauline narrative:</h3>
-              <p>{{ generator.st_paul_content|safe }}</p>            
+              <p>{{ generator.st_paul_content|safe }}</p> 
+              <h1>Bibliography 1</h1>
+              {{ generator.biblio|safe }}           
           {% endfor %}
         <br>
         
         <p>{{ watchtower_obj.conclusion|safe }} </p>
         <br>
-  {% endif %}
+        
+  
+        {% endif %}
+        <h1>Bibliography 2</h1>
+        {% if biblio_obj %}
+        {{ biblio_obj.biblio|safe}}
+        {% endif %}
   </div> <!-- end essay -->
 </article>
 {% endblock %}    
