Adjust text alignment of h6 meta data positioning

--- a/tarot_juicer/static/css/essay-main.css
+++ b/tarot_juicer/static/css/essay-main.css
@@ -1,7 +1,7 @@
 h6 {
   font-family: "Open Sans";
   font-weight: 300;
-  text-align: center;
+  /*text-align: center;*/
   /*position: absolute;*/
   /*top: 45%;*/
   right: 0;
