--- a/templates/essays/watchtower.html
+++ b/templates/essays/watchtower.html
@@ -30,10 +30,9 @@
         
         <p>{{ watchtower_obj.conclusion|safe }} </p>
         <br>
-        
-  
+          
         {% endif %}
-        <h1>Bibliography 2</h1>
+        <h4>Bibliography (site-wide)</h4>
         {% if biblio_obj %}
         {{ biblio_obj.biblio|safe}}
         {% endif %}
