--- a/templates/essays/watchtower.html
+++ b/templates/essays/watchtower.html
@@ -34,8 +34,10 @@
   
         {% endif %}
         <h1>Bibliography 2</h1>
-        {% if biblio_obj %}
-        {{ biblio_obj.biblio|safe}}
+        {% if biblio_objs %}
+          {% for biblio_obj in biblio_objs %} 
+            {{ biblio_obj.biblio|safe}}
+          {% endfor %}
         {% endif %}
   </div> <!-- end essay -->
 </article>
