Re-add <ul> style to override Bootsrap navbar

--- a/templates/landings/about.html
+++ b/templates/landings/about.html
@@ -13,6 +13,17 @@
 
 <h1> What is going on here?</h1>
 
+<style>
+ul {
+   list-style: circle;
+   list-style-type: disc;
+   margin-block-start: 1em;
+   margin-block-end: 1em;
+   margin-inline-start: 0px;
+   margin-inline-end: 0px;
+   padding-inline-start: 40px;
+}
+</style>
 
 {% if abouts %}
    {% for about in abouts %}    
