Re-instate loveable KITTENS img

--- a/templates/landings/gateway.html
+++ b/templates/landings/gateway.html
@@ -15,15 +15,15 @@
       {% include 'partials/_alerts.html' %}
     </div>
     
-    <!-- <img src="https://placekitten.com/200/287"> -->
+    <img src="https://placekitten.com/200/287"> 
 
-    <img id="muerte" src="{% static 'img/santa2.jpg' %}">
+    <!-- <img id="muerte" src="{% static 'img/santa2.jpg' %}"> -->
     
     <!-- <h3> This website is protected by cute little kittens</h3>  -->
 
     <h3> This website is hermetically sealed 
       <br> 
-      It's protected by Santa Muerte</h3>  
+      It's protected by KITTENS</h3>  
 
     <hr>
 
