--- a/templates/landings/gateway.html
+++ b/templates/landings/gateway.html
@@ -16,14 +16,23 @@
     </div>
     
     <img src="https://placekitten.com/200/287"> 
-
-    <!-- <img id="muerte" src="{% static 'img/santa2.jpg' %}"> -->
     
-    <!-- <h3> This website is protected by cute little kittens</h3>  -->
-
     <h3> This website is hermetically sealed 
-      <br> 
-      It's protected by KITTENS</h3>  
+        <br> 
+      It's protected by adorable little KITTENS
+    </h3>  
+
+    <!-- 
+    
+    <img id="muerte" src="{% static 'img/santa2.jpg' %}"> 
+    
+    <h3>
+        This website is hermetically sealed 
+          <br> 
+        It's protected by Our Lady
+    </h3>
+    
+  -->
 
     <hr>
 
